V 0.9.6
  - Implemented a native XDCC downloader, completely independent from Hexchat or an external python2 call.
V 0.9.5.7
  - Fixed Hexchat downloading of multiple files
  - Fixed issue #18
V 0.9.5.6
  - Fixed syntax errors in python 2
V 0.9.5.5
  - Improved python 2 support
v 0.9.5.4
  - Added python 2 support
v 0.9.5.3
  - Converts Markdown to .rst for the pypi site
v 0.9.5.2
  - Added Changelog to readme file
v 0.9.5.1
  - Created PyPi-friendly readme configuration
  - Added download url to project
v 0.9.5
  - Added Changelog